examples/test/testpolicy1874.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1874
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key2: value48
      key36: value42
      key6: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value23
          key33: value23
      podSelector:
        matchLabels:
          key37: value24
          key0: value30
